# quantify

./: .dockerignore  .gitignore  HANDOFF_STATE.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  pyproject.toml
chat/: CONTINUE_WITH_ANOTHER_AI.md  README.md  SESSION_HANDOFF_2026-07-14.md  SESSION_HANDOFF_2026-07-16.md
config/: .env.example  README.md  auto-iteration.example.yaml  auto-iteration.schema.json  binance-connection-contract.example.json  binance-connection-contract.schema.json  binance-endpoint-cost-catalog.example.json  binance-endpoint-cost-catalog.schema.json  binance-mandatory-endpoint-inventory.example.json  binance-mandatory-endpoint-inventory.schema.json  calibration-data-quality.example.yaml  calibration-data-quality.schema.json  calibration.env.example  capability-trust-bundle.example.json  capability-trust-bundle.schema.json  environment-variables.md  gateway.env.example  host-control.env.example  network-egress.example.yaml  network-egress.schema.json  price-action.example.yaml  price-action.schema.json  rate-budget.example.yaml  rate-budget.schema.json  risk.example.yaml  risk.schema.json  strategy-orchestration.example.yaml  strategy-orchestration.schema.json  system.example.yaml  system.schema.json  universe.example.yaml  universe.schema.json  validation.env.example  verification-keyring.host-control.example.json  verification-keyring.schema.json
contracts/: README.md  auto-iteration-report.schema.json  binance-gateway-ipc.schema.json  binance-gateway-request.schema.json  calibration-dataset-manifest.schema.json  calibration-dataset-plan.schema.json  codex-review-report.schema.json  cost-model.schema.json  domain-events.schema.json  edge-decision.schema.json  engineering-proposal.schema.json  enums.yaml  event-envelope.schema.json  openapi.yaml  (+17 more)
(+405 files in other folders)
