[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "ai-quant-system"
version = "0.1.0"
description = "Fail-closed AI quantitative trading system implementation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "jsonschema==4.26.0",
  "openapi-spec-validator==0.9.0",
  "polars==1.42.1",
  "psycopg[binary]==3.3.4",
  "pyarrow==25.0.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyyaml==6.0.3",
  "redis==8.0.1",
  "rfc8785==0.1.4",
  "sqlalchemy==2.0.51",
  "structlog==26.1.0",
  "uvicorn==0.51.0",
  "zstandard==0.25.0",
]

[dependency-groups]
dev = [
  "bandit==1.9.4",
  "cyclonedx-bom==7.3.0",
  "defusedxml==0.7.1",
  "hypothesis==6.156.6",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.21",
  "types-jsonschema==4.26.0.20260518",
  "types-pyyaml==6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_quant"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ai_quant"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
markers = [
  "contract: immutable contract validation",
  "security: security boundary validation",
  "integration: local integration tests",
  "property: property-based tests",
]

[tool.coverage.run]
branch = true
source = ["ai_quant"]
